--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,13 @@
 Changelog
 =========
 
+1.0b2 - 2009-06-15
+------------------
+
+* Make sure that we don't lose the function when using the
+  @form.default_value() decorator and the other value decorators.
+  [optilude]
+
 1.0b1 - 2009-04-17
 ------------------
 
