--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+1.0a2 - 2009-07-12
+------------------
+
+* Made adjustments for changes in plone.supermodel's API.
+  [optilude]
+
 1.0b2 - 2009-06-15
 ------------------
 
