--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,7 +1,13 @@
 Changelog
 =========
 
-1.0a2 - 2009-07-12
+1.0b5 - 2009-07-21
+------------------
+
+* Updated to new five.grok release.
+  [optilude]
+
+1.0b3 - 2009-07-12
 ------------------
 
 * Made adjustments for changes in plone.supermodel's API.
