Add the @error_message decorator. Note that tests + some corner cases are broken unless using z3c.form trunk (to become 2.2.3)
svn path=/plone.directives.form/trunk/; revision=34677

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,10 @@ Changelog
 1.0b7 - unreleased
 ------------------
 
+* Add ``@form.error_message()`` decorator for registering custom error
+  messages for errors and/or fields.
+  [optilude]
+
 * Add ``@form.validator()`` decorator to register a simple field validator.
   See README.txt for details.
   [optilude]
