Prepare plone.directives.form 1.0.
svn path=/plone.directives.form/trunk/; revision=49884

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,8 +1,10 @@
 Changelog
 =========
 
-1.0b8 - unreleased
-------------------
+1.0 - 2011-05-20
+----------------
+
+* No changes.
 
 
 1.0b7 - 2010-04-20
