--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,11 +1,13 @@
 Changelog
 =========
 
+1.0.1 - unreleased
+------------------
+
 1.0 - 2011-05-20
 ----------------
 
 * No changes.
-
 
 1.0b7 - 2010-04-20
 ------------------
